tests/testWorkflows/invalid_workflows/invalidActionWorkflow.playbook
{
    "name": "invalidActionWorkflow",
    "workflows": [
        {
            "actions": [
                {
                    "action_name": "invalid",
                    "app_name": "HelloWorldBounded",
                    "arguments": [
                        {
                            "name": "call",
                            "value": "Hello World"
                        }
                    ],
                    "device_id": 1,
                    "id": "4aa1a63e-cc09-4b90-9547-3947120b5126",
                    "name": -2
                },
                {
                    "action_name": "helloWorld",
                    "app_name": "HelloWorldBounded",
                    "arguments": [],
                    "device_id": 1,
                    "id": "85f33f9a-a5e1-484b-8add-3f7565a192a8",
                    "name": "start"
                }
            ],
            "branches": [
                {
                    "destination_id": "4aa1a63e-cc09-4b90-9547-3947120b5126",
                    "source_id": "85f33f9a-a5e1-484b-8add-3f7565a192a8",
                    "status": "Success"
                }
            ],
            "name": "multiactionWorkflow",
            "start": "85f33f9a-a5e1-484b-8add-3f7565a192a8"
        }
    ]
}